ユーザ登録APIの実装と、その他リファクタリング
